# application-store

./: .gitignore  README.md
data-engineering/_applications/: README.md
data-engineering/airflow/: airflow.md
data-engineering/couchdb/: .env  couchdb.md  docker-compose.yml
data-engineering/doris/: docker-compose.yml  doris.md
data-engineering/etcd/: etcd.md
data-engineering/flink/: .env  flink.md
data-engineering/hop/: docker-compose.yml  hop.md
data-engineering/kafka/: docker-compose.yml  server.properties
data-engineering/milvus/: docker-compose.yml  milvus.ipynb  milvus.md
data-engineering/mysql/: README.md  docker-compose.yml  mysql.md  mysql.sql
data-engineering/neo4j/: .env  docker-compose.yml  neo4j.md
data-engineering/postgresql/: postgresql.md
data-engineering/rabbitmq/: docker-compose.yml  enabled_plugins
data-engineering/rocketmq/: docker-compose.yml
data-engineering/spark/: .env.master  .env.worker  Dockerfile  bitnami.docker-compose.yml  bitnami.env.master  docker-compose.yml  spark.md
data-engineering/sqlserver/: .env  TSQLV6-hack.sql  docker-compose.yml  sqlserver.ipynb  sqlserver.md  (+1 more)
devcontainers/spark/: PySpark.ipynb  README.md  pyproject.toml
devcontainers/spark/.devcontainer/: devcontainer.json  requirements.txt
devcontainers/spark/learning-spark/: ch02-getting-started.ipynb  ch03-structured-api.ipynb  ch04-06-spark-sql.ipynb  ch09-datalakes.ipynb  ch10-mllib.ipynb  ch11-ml-pipelines.ipynb  mnmcount.py
devcontainers/spark/nlp-with-spark-nlp/: ch01-getting-started.ipynb
language-runtime/: Development Containers.md
(+81 files in other folders)
