[project]
name = "spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.80.0",
  "grpcio-status>=1.62.3",
  "matplotlib>=3.10.8",
  "numpy==1.24.4",
  "pandas>=2.1.0",
  "pipdeptree>=2.35.1",
  "protobuf>=7.34.1",
  "pyarrow>=23.0.1",
  "pyspark @ file:///C:/Users/zhouj/Downloads/pyspark-3.5.8.tar.gz",
  "spark-nlp==6.4.0",
]
